# SimpleComix

./: .gitignore  config.json  main.py  pyproject.toml
frontend/: package-lock.json
frontend/src/: App.svelte
frontend/src/lib/: store.js
frontend/src/routes/: Explorer.svelte  Home.svelte  View.svelte
utils/: utils.py
