[tool.poetry]
name = "simple_comix"
version = "0.1.0"
description = ""
authors = ["PureBlueWater <chsrlyhsn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
